fix: too small font size for global search res

--- a/src/styles/components/global-search.scss
+++ b/src/styles/components/global-search.scss
@@ -1,4 +1,3 @@
-/* src/styles/components/global-search.scss */
 @import "../variables.scss";
 
 .header-search-wrapper {
@@ -70,13 +69,16 @@
           width: 100%;
           cursor: pointer;
 
+          p {
+            font-size: 1rem;
+          }
+
           .course-code {
             font-weight: bold;
             color: var(--colour-sosy-green-500);
           }
 
           .course-title {
-            // font-size: 0.9rem;
             color: var(--colour-neutral-400);
           }
         }
